k3-Based-Canarydeployment k3s and Istio-proj7/k8s-yaml/20-istio-canary.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: demo-gateway
  namespace: canary-demo
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: demo-dr
  namespace: canary-demo
spec:
  host: demo.canary-demo.svc.cluster.local
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: demo-vs
  namespace: canary-demo
spec:
  hosts:
    - "*"
  gateways:
    - demo-gateway
  http:
    - route:
        - destination:
            host: demo.canary-demo.svc.cluster.local
            subset: v1
          weight: 80
        - destination:
            host: demo.canary-demo.svc.cluster.local
            subset: v2
          weight: 20
